--- a/index-email.html
+++ b/index-email.html
@@ -27,7 +27,7 @@
 
             <div class="bg-white p-8 rounded-lg shadow-lg">
                 <!-- Replace youremail@example.com with your actual email address -->
-                <form action="https://formsubmit.co/youremail@example.com" method="POST" class="space-y-4">
+                <form action="https://formsubmit.co/theta.sound.info@gmail.com" method="POST" class="space-y-4">
                     <div>
                         <input
                             type="email"
