--- a/index-simple.html
+++ b/index-simple.html
@@ -33,7 +33,7 @@
             <div class="bg-white p-8 rounded-lg shadow-lg">
                 <div class="form-container">
                     <!-- Replace this URL with your own Google Form embed URL -->
-                    <iframe src="https://docs.google.com/forms/d/e/YOUR_FORM_ID_HERE/viewform?embedded=true"></iframe>
+                    <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSjL06kPBxrp2M892_OOgqbA3u1uxGw_j-vM3-g6A06BL1GXrFwFuFvq_p2wLLmE9I0M1fLXg0cZGU3/pubhtml?widget=true&amp;headers=false"></iframe>
                 </div>
             </div>
 
