--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </p>
 
             <div class="bg-white p-8 rounded-lg shadow-lg">
-                <form id="emailForm" class="space-y-4">
+                <form action="https://docs.google.com/spreadsheets/d/e/2PACX-1vSjL06kPBxrp2M892_OOgqbA3u1uxGw_j-vM3-g6A06BL1GXrFwFuFvq_p2wLLmE9I0M1fLXg0cZGU3/pubhtml" method="POST" class="space-y-4">
                     <div>
                         <input
                             type="email"
